# Gen-AI-Project-With-Langchain

./: .gitignore  01_demo_document_professor.py  02_demo_up_to_vector_store.py  03_demo_UT_chain_query.py  04_demo_UT_chain_mmr.py  05_demo_UT_chain_mmr_stream.py  06_demo_UT_chain_query_stream.py  07_demo_tavily_context_search.py  08_demo_tavily_search.py  09_demo_chat_interface.py  10_agent_check.py  10_agent_check_streaming.py  11_test_tools.py  12_query_classifier_check.py  README.md  app.py  app_mmr.py  app_mmr_2.py  main.py  pyproject.toml  requirements.txt  sample_file.txt
config/: __init__.py  settings.py
core/: __init_.py  agent.py  chain.py  document_processor.py  embeddings.py  vector_store.py
demo/: app.py  app_mmr_1_work_done.py
tools/: __init__.py  tavily_search.py  tools_for_chat.py
ui/: __init__.py  chat_interface.py  components.py
